--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="app-container"></div>
 
-<script src="../node_modules/babel-core/browser-polyfill.min.js"></script>
+<script src="browser-polyfill.min.js"></script>
 <script src="bundle.js"></script>
 
 </body>
