--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <title></title>
     <style>
         body {
-            background: gray;
             margin: 0;
-        }
-
-        canvas {
-            background: white;
         }
     </style>
 </head>
@@ -18,7 +13,7 @@
 
 <div id="app-container"></div>
 
-<script src="browser-polyfill.min.js"></script>
+<script src="../node_modules/babel-core/browser-polyfill.min.js"></script>
 <script src="bundle.js"></script>
 
 </body>
