--- a/examples.html
+++ b/examples.html
@@ -10,70 +10,70 @@
 <h2>Order of Operations</h2>
 <ul>
     <li>
-        <a href="?start=2*(3-4)-(5+7)">2*(3-4)-(5+7)</a>
+        <a href="/mathipulator/?start=2*(3-4)-(5+7)">2*(3-4)-(5+7)</a>
     </li>
 </ul>
 
 <h2>Integers</h2>
 <ul>
     <li>
-        <a href="?start=2+-3">2 + (-3)</a>
+        <a href="/mathipulator/?start=2+-3">2 + (-3)</a>
     </li>
     <li>
-        <a href="?start=1--2">1 - (-2)</a>
+        <a href="/mathipulator/?start=1--2">1 - (-2)</a>
     </li>
     <li>
-        <a href="?start=a-a%3D0">a - a = 0</a>
+        <a href="/mathipulator/?start=a-a%3D0">a - a = 0</a>
     </li>
 </ul>
 
 <h2>Fractions</h2>
 <ul>
     <li>
-        <a href="?start=1/2+1/3">1/2 + 1/3</a>
+        <a href="/mathipulator/?start=1/2+1/3">1/2 + 1/3</a>
     </li>
     <li>
-        <a href="?start=1/(a/b)">1 / (2/3)</a>
+        <a href="/mathipulator/?start=1/(a/b)">1 / (2/3)</a>
     </li>
     <li>
-        <a href="?start=1/(a/b)">1 / (a/b)</a>
+        <a href="/mathipulator/?start=1/(a/b)">1 / (a/b)</a>
     </li>
 </ul>
 
 <h2>Equations</h2>
 <ul>
     <li>
-        <a href="?start=2x+5%3D10">2x + 5 = 10</a>
+        <a href="/mathipulator/?start=2x+5%3D10">2x + 5 = 10</a>
     </li>
     <li>
-        <a href="?start=(5-x)/3%3D2x-7">(5 - x)/3 = 2x - 7</a>
+        <a href="/mathipulator/?start=(5-x)/3%3D2x-7">(5 - x)/3 = 2x - 7</a>
     </li>
 </ul>
 
 <h2>Rational Expressions</h2>
 <ul>
     <li>
-        <a href="?start=1/x+1/y">1/x + 1/y</a>
+        <a href="/mathipulator/?start=1/x+1/y">1/x + 1/y</a>
     </li>
 </ul>
 
 <h2>Distribute/Factor</h2>
 <ul>
     <li>
-        <a href="?start=x*y+x">x*y + x</a>
+        <a href="/mathipulator/?start=x*y+x">x*y + x</a>
     </li>
     <li>
-        <a href="?start=x*(y+2)">x*(y + 2)</a>
+        <a href="/mathipulator/?start=x*(y+2)">x*(y + 2)</a>
     </li>
     <li>
-        <a href="?start=(x+1)*(x-4)">(x + 1)*(x - 4)</a>
+        <a href="/mathipulator/?start=(x+1)*(x-4)">(x + 1)*(x - 4)</a>
     </li>
 </ul>
 
 <h2>Collect Like Terms</h2>
 <ul>
     <li>
-        <a href="?start=2x+3x-7x%3D25">2x + 3x - 7x = 25</a>
+        <a href="/mathipulator/?start=2x+3x-7x%3D25">2x + 3x - 7x = 25</a>
     </li>
 </ul>
 
