added an option <StaticMath> goal to the app

--- a/static/examples.html
+++ b/static/examples.html
@@ -23,7 +23,7 @@
         <a href="/?start=1--2">1 - (-2)</a>
     </li>
     <li>
-        <a href="/?start=a-a%3D0">a - a = 0</a>
+        <a href="/?start=a-a%3D0&finish=a%3D--a">a - a = 0</a> [goal]
     </li>
 </ul>
 
@@ -43,7 +43,7 @@
 <h2>Equations</h2>
 <ul>
     <li>
-        <a href="/?start=2x+5%3D10">2x + 5 = 10</a>
+        <a href="/?start=2x+5%3D10&finish=x%3D5/2">2x + 5 = 10</a> [goal]
     </li>
     <li>
         <a href="/?start=(5-x)/3%3D2x-7">(5 - x)/3 = 2x - 7</a>
@@ -53,7 +53,7 @@
 <h2>Rational Expressions</h2>
 <ul>
     <li>
-        <a href="/?start=1/x+1/y">1/x + 1/y</a>
+        <a href="/?start=1/x+1/y&finish=(x+y)/(xy)">1/x + 1/y</a> [goal]
     </li>
 </ul>
 
@@ -66,7 +66,7 @@
         <a href="/?start=x*(y+2)">x*(y + 2)</a>
     </li>
     <li>
-        <a href="/?start=(x+1)*(x-4)">(x + 1)*(x - 4)</a>
+        <a href="/?start=(x+1)*(x-4)&finish=x*x-3x-4">(x + 1)*(x - 4)</a> [goal]
     </li>
 </ul>
 
