fix one of the integer links in examples.html

--- a/examples.html
+++ b/examples.html
@@ -23,7 +23,7 @@
         <a href="/mathipulator/?start=1--2">1 - (-2)</a>
     </li>
     <li>
-        <a href="/mathipulator/?start=a-a%3D0&finish=a%3D--a">a - a = 0</a> [goal]
+        <a href="/mathipulator/?start=a-a%3D0&finish=a%3D(-(-a))">a - a = 0</a> [goal]
     </li>
 </ul>
 
